--- a/.github/workflows/url_update.yml
+++ b/.github/workflows/url_update.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3.3.0
       - name: Update YGGTorrent URL
         run: |
-          OLD_YGG=$(grep -Po "url = '\K[^']" yggtorrent.py)
+          OLD_YGG=$(grep -Po "url = '\K[^']+" yggtorrent.py)
           echo "fetched old url $OLD_YGG"
           NEW_YGG=$(curl -Ls -o /dev/null -w %{url_effective} $OLD_YGG)
           echo "fetched new url $NEW_YGG"
